[project]
name = "library-app"
version = "0.1.0"
description = ""
authors = [
    {name = "veo8888",email = "veo8888@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "library_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
lib-app = "library_app.main:main"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
